turtleart.diskfourth.DiskFourth.scala.error
Compilation error:
DiskFourth:1: error: ';' expected but ',' found.
override def run() {for (i<- 1 to 90) {avance(100),recule(100);droite(1)}
                                                  ^